# encoding: utf-8
Editra
Author: Cody Precord
Copyright: (c) Cody Precord 2005-2009
License: wxWindows

Change Log:

#-----------------------------------------------------------------------------#
Changes since last release:

VERSION 0.4.85
DATE 0x/xx/2009
25th Alpha Release

NEWS:

NEW: [features/improvments]
+Greatly improved performance of loading large files.
+Add Count feature to find dialog for counting number of matches in a buffer.
+Add Vim find char motions (patch from hasan.aljudy).
+Add support for the Groovy programming language (patch from omar.gomez).
+Add new syntax style sheet Guepardo (patch from omar.gomez).
+Add support for loading installation provided key profiles.
+Add VisualStudio keybindings option (from Vivian).
+Updater is only available if user account running program has access
 permissions to the install directory.
+New version of FileBrowser plugin. (adds search in directory option).

BUG FIXES:
+Fix Launch config not properly being initialized when config panel accessed
from plugin dialog for first time.
+Fix command entry listing of paths (patch from hasan.aljudy).
+Fix autocompletion for when accented characters are in the command string
 (modified patch from roman.chyla).
+Fix some unicode handling issues in search/replace. (patch from roman.chyla)
+Fix number of printout rendering issues.
+Update readonly status when permissions change on disk.
+Fix error in moving a tab from one window to another when the tab was the only
tab left in the window it was moved from. (filebrowser bug).

#-----------------------------------------------------------------------------#

VERSION 0.4.75
DATE 03/28/2009
24th Alpha Release

NEWS:

This release fixes a handful of important bugs and new features. The Plugin
Manager dialog has been completely reworked. Configuration options for plugins
that provide them are now available in the dialog as well as better error
reporting for plugins that could not properly be loaded.
